--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,8 @@ jobs: # the things being executed
   tests: # the name of your status check, will become important when you do branch protection
     runs-on: ubuntu-latest # which device on Github's server that you are running the Actions on
     steps:
-      
-uses: actions/checkout@v4 # using version 4 of Actions
-name: Install Dependencies
-    run: npm install
-name: Unit Test
-  run: npm test ./tests/sum.test.js # the actual testing line
+      - uses: actions/checkout@v4 # using version 4 of Actions
+      - name: Install Dependencies
+        run: npm install
+      - name: Unit Test
+        run: npm test ./__tests__/sum.test.js # the actual testing line
